--- a/home/templates/home/order_list.html
+++ b/home/templates/home/order_list.html
@@ -60,7 +60,7 @@
               <tr>
                 <td>{{ order.id }}</td>
                 <td>{{ order.computer.name }}</td>
-                <td>{{ order.customer.name }}</td>
+                <td>{{ order.computer.customer.name }}</td>
                 <td>{{ order.computer.date }}</td>
                 <td><span class="tag {% if order.computer.status == 'Confirm' %}tag-success{% elif order.computer.status == 'Ready' %}tag-warning{% elif order.computer.status == 'Progress' %}tag-danger{% else %}tag-primary{% endif %}">{{ order.computer.status }}</span></td>
               </tr>
