--- a/home/templates/home/order_list.html
+++ b/home/templates/home/order_list.html
@@ -32,45 +32,23 @@
           <h3 class="card-title">Orders</h3>
 
           <div class="card-tools">
-            <div class="input-group input-group-sm" style="width: 150px;">
-              <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
-
-              <div class="input-group-append">
-                <button type="submit" class="btn btn-default">
-                  <i class="fas fa-search"></i>
-                </button>
+            <form id="search-form" method="GET" action="{% url 'search_orders' %}">
+              <div class="input-group input-group-sm" style="width: 150px;">
+                <input type="text" name="q" id="search-input" class="form-control float-right" placeholder="Search">
+            
+                <div class="input-group-append">
+                  <button type="submit" class="btn btn-default">
+                    <i class="fas fa-search"></i>
+                  </button>
+                </div>
               </div>
-            </div>
+            </form>
           </div>
+          
         </div>
         <!-- /.card-header -->
-        <div class="card-body table-responsive p-0">
-          <table class="table table-hover text-nowrap">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Computer</th>
-                <th>User</th>
-                <th>Date</th>
-                <th>Status</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for order in orders %}
-              <tr>
-                <td>{{ order.id }}</td>
-                <td>{{ order.computer.name }}</td>
-                <td>{{ order.computer.customer.name }}</td>
-                <td>{{ order.computer.date }}</td>
-                <td><span class="tag {% if order.computer.status == 'Confirm' %}tag-success{% elif order.computer.status == 'Ready' %}tag-warning{% elif order.computer.status == 'Progress' %}tag-danger{% else %}tag-primary{% endif %}">{{ order.computer.status }}</span></td>
-              </tr>
-            {% empty %}
-            <tr>
-              <td colspan="5">No orders found.</td>
-            </tr>
-            {% endfor %}
-            </tbody>
-          </table>
+        <div class="card-body table-responsive p-0" id="table-container">
+          {% include 'home/order_list_results.html' %}
         </div>
         <!-- /.card-body -->
       </div>
@@ -79,4 +57,22 @@
     </section>
     <!-- /.content -->
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#search-input').on('input', function() {
+        var query = $(this).val();
+        $.ajax({
+          url: '{% url "search_orders" %}',
+          data: {
+            'q': query
+          },
+          success: function(data) {
+            $('#table-container').html(data);
+          }
+        });
+      });
+    });
+  </script>
 {% endblock content %}
